Создание страницы сообщений, первичная стилизация. Рефакторинг кода - информация на странице берется из объектов. Выполнена маршрутизация ссылок из нав.меню

--- a/public/index.html
+++ b/public/index.html
@@ -4,23 +4,27 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Olympus</title>
+    <style>
+    	span{
+    		display: block;
+    	}
+    </style>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id='root'></div>
-<!-- 	<label>
-<input type='text'>
-</label>
-<label for='_1'>Label</label>
-<input type='text' id='_1'>
-<br>
-<span></span>
-<br>
-<input type='radio' name='r1' value='1'>
-<input type='radio' name='r1' value='2'>
-      <input type='radio' name='r1' value='3'>
-      <input type='radio' name='r1' value='4'>
-<button>Go</button>
-    <script src='test.js'></script> -->
+    <div>
+    	<h1>Text</h1>
+    	<div>
+    	Lorem ipsum dolor sit amet, <b>consectetur</b> adipisicing elit. Earum minus, debitis illo fugit dolorum <i>reiciendis</i> autem aperiam velit <span>eveniet</span> delectus inventore culpa beatae quam, id rem. Et magni temporibus, earum?  
+    	</div>  	
+    </div>
+    <div class='text'></div>
+    <div id='mouseTarget'>
+ <ul id="unorderedList">
+  <li>No events yet!</li>
+ </ul>
+</div>
+    <script src='test.js'></script>
   </body>
 </html>
