--- a/public/index.html
+++ b/public/index.html
@@ -5,26 +5,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Olympus</title>
     <style>
-    	span{
+    	.text{
     		display: block;
+    		width: 100px;
+    		height: 50px;
+    		border: 1px solid red;
     	}
     </style>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id='root'></div>
-    <div>
-    	<h1>Text</h1>
-    	<div>
-    	Lorem ipsum dolor sit amet, <b>consectetur</b> adipisicing elit. Earum minus, debitis illo fugit dolorum <i>reiciendis</i> autem aperiam velit <span>eveniet</span> delectus inventore culpa beatae quam, id rem. Et magni temporibus, earum?  
-    	</div>  	
-    </div>
-    <div class='text'></div>
-    <div id='mouseTarget'>
- <ul id="unorderedList">
-  <li>No events yet!</li>
- </ul>
-</div>
-    <script src='test.js'></script>
+    <!--<div class='text'></div>
+    <input type='text'>
+    <input type='text'>
+    <button type='button'>Go</button>
+    <br>
+    <script src='test.js'></script>-->
   </body>
 </html>
